Fix SIP Pairing
